[package]
name = "aquaixilis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
crossbeam-channel = "0.5.8"
io-uring = "0.6.0"
rand = "0.8.5"
slab = "0.4.8"
tokio = { version = "1.28.2", features = ["full"] }
